k8s/apps/storage/zot/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: zot-ha
  namespace: storage
spec:
  selector:
    app.kubernetes.io/name: zot
  ports:
    - name: http
      port: 5000
      targetPort: 5000
      nodePort: 30500
      protocol: TCP
  type: NodePort
